--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -13,7 +13,8 @@ permissions:
 jobs:
   deploy:
     runs-on: ubuntu-latest
-    if: github.event.pull_request.merged == true && github.actor == 'github-actions[bot]'
+    if: github.event.pull_request.merged == true
     steps:
+      - run: echo ${{ github.actor }}
       - uses: actions/checkout@v4
       - run: git push --force origin develop:main
